src/App.css
.App {
  text-align: center;
  display: grid;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }

  to {
    transform: rotate(360deg);
  }
}

/* --------- Typography ---------- */

h1 {
  font-family: Montserrat;
  font-weight: 500;
  color: #8f8f8f;
  font-size: 26px;
  padding-top: 30px;
  padding-bottom: 70px;
}

h2 {
  font-family: Outfit;
  font-weight: 300;
}

h3 {
  font-family: Outfit;
  font-weight: 400;
}

h4 {
  font-family: Outfit;
  font-weight: 300;
}

h5 {
  font-family: Outfit;
  font-weight: 300;
}

p {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

ul {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

li {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 300;
}

/* --------- Button ---------- */ 

.btn-primary {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
}

.btn-primary:hover {
  background-color: #a57b32;
  font-weight: 300;
}

.btn-primary:active {
  background-color: #a57b32;
  font-weight: 300;
} 

.btn-primary:focus {
  background-color: #a57b32;
  font-weight: 300;
  box-shadow: 0 0 0 0.25rem hsla(38, 59%, 52%, 0.634);
}

.btn-primary:active:focus {
  background-color: #a57b32;
  font-weight: 300;
  box-shadow: 0 0 0 0.25rem hsla(38, 59%, 52%, 0.634);
}

/* --------- NavBar ---------- */

.navbar {
  position: -webkit-sticky;
  position: sticky;
  top: 0;
  font-family: Outfit;
  font-weight: 300;
  font-size: 14px;
  letter-spacing: 0.5px;
  padding: 10px 15px;
  z-index: 99 !important;
}

.nav-item {
  margin: 0 10px;
}

.dropdown-item {
  font-family: Outfit;
  font-size: 15px;
  letter-spacing: normal;
  color: #495057;
}

/* --------- Page 1 - Home Page ---------- */

.homepage {
  display: block;
}

.popular-pick {
  padding: 80px 60px;
}

.product-item {
  padding-top: 50px;
  padding-left: 0;
  padding-right: 0;
}

.product-image {
  width: 100%;
}

@media (max-width: 580px) {
  .popular-pick {
    padding: 80px 15px;
    margin: auto;
  }

  .product-image {
    width: 80%;
  }
}

.item-name {
  font: Outfit;
  font-weight: 400;
  margin-top: 10px;
  margin-bottom: 8px;
}

.item-name-link {
  font-family: Outfit;
  font-size: 16px;
  font-weight: 400;
  text-decoration: none;
  color: #1a1a1a;
}

.item-name-link:hover {
  color: #cd973d;
  font-weight: 600;
}

.item-name-link:focus {
  color: #a57b32;
  font-weight: 600;
}

.item-category {
  font: Outfit;
  font-weight: 500;
  color: #8f8f8f;
}

.product-category {
  padding: 20px 50px 5px 50px;
}

.category-image-container {
  width: 50%;
  height: 500px;
  margin-top: 0;
  padding-right: 16px;
  display: inline-block;
  vertical-align: top;
}

.category-image {
  width: 100%;
  height: 500px;
  object-fit: cover;
}

.category-info-container {
  width: 50%;
  height: 500px;
  padding-left: 16px;
  display: inline-block;
}

.category-info {
  height: 100%;
  background-color: #E3E3E3;
  margin: auto;
  position: relative;
}

.category-info-inner {
  position: absolute;
  width: 80%;
  top: 50%;
  left: 50%;
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

@media (max-width: 800px) {
  .product-category {
    width: 100%;
    padding: 20px 30px;
    margin-bottom: 10px;
    display: block;
  }

  .category-image-container {
    width: 100%;
    height: 350px;
    display: block;
    padding-right: 0;
  }

  .category-image {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }

  .category-info-container {
    width: 100%;
    height: 380px;
    display: block;
    padding: 0;
  }
}

.category-description {
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
}

.shop-by-categories-button {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 10px 40px;
  margin-top: 10px;
}

.view-all-product-button {
  padding: 10px 120px;
  margin-top: 60px;
}

.footer {
  margin-top: 80px;
}

.footer-info {
  width: 100%;
  height: 300px;
  background-color: #212020;
}

.copyright-container {
  width: 100%;
  height: 60px;
  background-color: #1a1a1a;
}

.copyright {
  color: white;
  padding-top: 19px;
  font-family: Source Sans Pro;
  font-size: 13px;
}


/* --------- Page 2 - All Products ---------- */

.all-products {
  padding: 80px 100px;
}

.signature-collection {
  padding: 80px 100px;
}

.poster-collection {
  padding: 80px 100px;
}


/* --------- Page 3 - Product Details ---------- */

.product-details {
  padding: 80px 160px;
}

.carousel-inner {
  vertical-align: middle;
}

.carousel-control-circle {
  width: 50px;
  height: 50px;
  -webkit-border-radius: 25px;
  -moz-border-radius: 25px;
  border-radius: 25px;
  background-color: #b6b6b6;
  vertical-align: middle;
}

.carousel-control-prev-icon {
  margin-top: 8px;
}

.carousel-control-next-icon {
  margin-top: 8px;
}

.product-name {
  font-family: Outfit;
  font-size: 32px;
  font-weight: 400;
  margin-bottom: 10px;
}

.product-collection-artist {
  font-weight: 400;
}

.product-infos {
  text-align: left;
  padding: 0px 50px;
}

.pricing-value {
  font-size: 24px;
  margin: 5px 0 20px;
}

.select-image-size-button {
  width: 100%;
  border-radius: 0;
  border-color: #495057;
  font-family: Outfit;
  margin-bottom: 20px;
}

.size-selection-button {
  font-family: Outfit;
  font-size: 16px;
  color: #282c34;
  border-radius: 0;
  border-color: #5d5d5d;
  background-color: white;
  width: 90px;
  padding: 6px 12px;
  margin-right: 10px;
}

.btn-check:checked+.size-selection-button {
  font-family: Outfit;
  font-size: 16px;
  color: white;
  border-radius: 0;
  border-color: #282c34;
  background-color: #282c34;
  width: 90px;
  padding: 6px 12px;
  margin-right: 10px;
}

.btn-check:checked+.size-selection-button:active {
  color: white;
  border-color: #282c34;
  background-color: #282c34;
}

.btn-check:checked+.size-selection-button:focus {
  color: white;
  border-color: #495057;
  background-color: #5d5d5d;
  box-shadow: 0 0 0 0.25rem hsla(38, 59%, 52%, 0.634);
}

.size-selection-button:hover {
  color: white;
  border-color: #cd973d;
  background-color: #cd973d;
}

.btn-check:active {
  color: white;
  border-color: #495057;
  background-color: #5d5d5d;
}

.adjust-quantity-button {
  width: 110px;
  padding: 0;
  margin: auto;
}

.quantity-minus-button {
  margin: 0 auto 0 0;
}

.quantity-plus-button {
  margin: 0 0 0 auto;
}

.quantity-field {
  width: 40px;
  font-family: Outfit;
  text-align: center;
  margin: auto;
}

.add-to-cart-button {
  background-color: #cd973d;
  border: none;
  border-radius: 0;
  font-family: Outfit;
  font-weight: 300;
  letter-spacing: 2px;
  padding: 10px 84px;
  margin-top: 30px;
  margin-bottom: 30px;
}

.product-description {
  padding-top: 0;
}

.add-to-cart-with-quantity {
  display: flex;
}

.icon-shape {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  vertical-align: middle;
}

.icon-sm {
  width: 2rem;
  height: 2rem;
}

.border-product {
  margin: 0 0 25px;
  border-top: 1px solid #efefef;
}


/* --------- Page 4 - Shopping Cart ---------- */

.cart {
  width: 100%;
  max-width: 1024px;
  padding: 80px 15px 80px 15px;
  margin: auto;
  font-family: Outfit;
}

.cart-table {
  margin: 80px 15px;
}

.cart-table-heading {
  font-size: 17px;
  font-weight: 500;
  margin-bottom: 15px;
}

.cart-table-heading-product {
  text-align: left;
}

.cart-table-heading-quantity {
  text-align: center;
}

.cart-table-heading-total {
  text-align: right;
}

.cart-table-row {
  margin-left: 0;
  padding-left: 0;
  padding-bottom: 25px;
}

.cart-item-info {
  padding: 0;
  margin-top: 0;
}

.cart-item-info-container {
  padding: 0;
}

.cart-table-product-image-container {
  width: 40%;
  padding-left: 0;
  display: inline-block;
  margin-left: 0;
}

.cart-table-product-image {
  width: 100%;
  padding-left: 0;
}

.cart-table-product-info {
  width: 60%;
  text-align: left;
  margin: auto;
  display: inline-block;
  padding-left: 25px;
}

@media (max-width: 800px) {
  .cart-item-info-container {
    display: block;
  }

  .cart-table-product-image-container {
    width: 170px;
    margin-top: 0;
    display: block;
  }

  .cart-table-product-info {
    width: 100%;
    padding-left: 0;
    display: block;
    margin-top: 15px;
  }
}

.cart-table-product-name {
  font-size: 16px;
  font-weight: 400;
  margin-bottom: 5px;
}

.cart-table-product-size {
  font-size: 16px;
  font-weight: 400;
  color: #848484;
  margin-bottom: 5px;
}

.cart-table-product-pricing {
  font-size: 16px;
  font-weight: 300;
  margin-bottom: 0;
}

.cart-adjust-quantity-button {
  margin: auto;
}

.cart-item-total-pricing {
  font-size: 16px;
  font-weight: 300;
  text-align: right;
  margin: auto;
}

.cart-table-footer {
  text-align: right;
}

.cart-subtotal {
  font-size: 17px;
  font-weight: 500;
  margin-top: 15px;
  margin-bottom: 5px;
}

.cart-taxes-shipping-reminder {
  font-size: 16px;
  font-style: italic;
  font-weight: 400;
  color: #848484;
  margin-bottom: 25px;
}

.check-out-button {
  width: 200px;
}

